※得到紅利的小字

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
@@ -1241,9 +1241,12 @@
                         <hr>
                     }
                 </div>
-                <div class=" coupon-box-btn col-12 d-flex shopping-box ">
+                <div class="col-12 d-flex ">
+                    <a class="ml-auto mr-2" style="color:#DE9E4F">可獲得的紅利</a>
+                    <a class="mr-2" style="color:#DE9E4F">200</a>
+                    <a class="mr-2" style="color:#DE9E4F">點</a>
                     <button type="submit" id="submit-order-btn"
-                            class=" checkout-btn ml-auto btn hvr-hover">
+                            class="checkout-btn btn hvr-hover ">
                         確認訂單
                     </button>
                 </div>
