--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/chatbox.css
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/chatbox.css
@@ -19,6 +19,7 @@
     padding: 28px;
     cursor: pointer;
     box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.6), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    z-index:999;
 }
 
 .btn#my-btn {
